--- a/index.html
+++ b/index.html
@@ -3,90 +3,182 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Sharing</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    video {
-      width: 100%;
-      margin-bottom: 10px;
-    }
-  </style>
+  <title>Video Sharing Platform</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Video Sharing Platform</h1>
-  <h2>Upload Video</h2>
-  <form id="upload-form">
-    <input type="text" id="video-name" placeholder="Video Name" required />
-    <input type="url" id="github-url" placeholder="GitHub Video URL" required />
-    <button type="submit">Upload</button>
-  </form>
-
-  <h2>Available Videos</h2>
-  <div id="video-list"></div>
+<body class="bg-gray-100 text-gray-800">
+  <div id="app" class="min-h-screen flex items-center justify-center">
+    <!-- Content will be dynamically loaded here -->
+  </div>
 
   <script>
-    const API_BASE = "https://square-cloud-f8f6.shikahajeeb.workers.dev/";
+    const API_BASE = ""; // Replace with your Worker URL
+    const app = document.getElementById("app");
 
-    const uploadForm = document.getElementById("upload-form");
-    const videoList = document.getElementById("video-list");
+    function setView(view) {
+      app.innerHTML = view;
+    }
 
-    uploadForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("video-name").value;
-      const githubUrl = document.getElementById("github-url").value;
+    function checkAuth() {
+      return document.cookie.includes("session=");
+    }
 
-      const response = await fetch(`${API_BASE}/upload`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ name, githubUrl }),
-      });
-
-      if (response.ok) {
-        alert("Video uploaded");
-        loadVideos();
-      } else {
-        alert("Upload failed");
+    async function loadDashboard() {
+      const response = await fetch(`${API_BASE}/videos`, { credentials: "include" });
+      if (!response.ok) {
+        alert("You must be logged in to access the dashboard.");
+        return loadLoginPage();
       }
-    });
-
-    async function loadVideos() {
-      const response = await fetch(`${API_BASE}/videos`);
       const videos = await response.json();
-
-      videoList.innerHTML = videos
+      const videoList = videos
         .map(
           (video) => `
-        <div>
-          <h3>${video.name}</h3>
-          <video controls>
+        <div class="border p-4 rounded mb-4">
+          <h3 class="font-bold">${video.name}</h3>
+          <video controls class="w-full mt-2">
             <source src="${video.githubUrl}" type="video/mp4" />
           </video>
-          <button onclick="deleteVideo('${video.name}')">Delete</button>
+          <button onclick="deleteVideo('${video.name}')" class="bg-red-500 text-white px-4 py-2 rounded mt-2">
+            Delete
+          </button>
         </div>
       `
         )
         .join("");
+
+      setView(`
+        <div class="max-w-4xl mx-auto p-6">
+          <h1 class="text-2xl font-bold mb-4">Dashboard</h1>
+          <form id="upload-form" class="mb-6">
+            <input type="text" id="video-name" placeholder="Video Name" class="border p-2 rounded w-full mb-2" required />
+            <input type="url" id="github-url" placeholder="GitHub Video URL" class="border p-2 rounded w-full mb-2" required />
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Upload</button>
+          </form>
+          <h2 class="text-xl font-bold mb-4">Your Videos</h2>
+          <div id="video-list">
+            ${videoList}
+          </div>
+          <button onclick="logout()" class="bg-gray-500 text-white px-4 py-2 rounded mt-4">Logout</button>
+        </div>
+      `);
+
+      document.getElementById("upload-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const name = document.getElementById("video-name").value;
+        const githubUrl = document.getElementById("github-url").value;
+
+        const response = await fetch(`${API_BASE}/upload`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          credentials: "include",
+          body: JSON.stringify({ name, githubUrl }),
+        });
+
+        if (response.ok) {
+          alert("Video uploaded");
+          loadDashboard();
+        } else {
+          alert("Upload failed");
+        }
+      });
     }
 
     async function deleteVideo(name) {
       const response = await fetch(`${API_BASE}/delete`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
+        credentials: "include",
         body: JSON.stringify({ name }),
       });
 
       if (response.ok) {
         alert("Video deleted");
-        loadVideos();
+        loadDashboard();
       } else {
         alert("Delete failed");
       }
     }
 
-    loadVideos();
+    async function loadLoginPage() {
+      setView(`
+        <div class="max-w-md mx-auto p-6 bg-white shadow-md rounded">
+          <h1 class="text-2xl font-bold mb-4">Login</h1>
+          <form id="login-form">
+            <input type="email" id="email" placeholder="Email" class="border p-2 rounded w-full mb-2" required />
+            <input type="password" id="password" placeholder="Password" class="border p-2 rounded w-full mb-2" required />
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Login</button>
+          </form>
+          <p class="mt-4">
+            Don't have an account? <a href="#" onclick="loadRegisterPage()" class="text-blue-500">Register</a>
+          </p>
+        </div>
+      `);
+
+      document.getElementById("login-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        const response = await fetch(`${API_BASE}/login`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, password }),
+        });
+
+        if (response.ok) {
+          loadDashboard();
+        } else {
+          alert("Login failed");
+        }
+      });
+    }
+
+    async function loadRegisterPage() {
+      setView(`
+        <div class="max-w-md mx-auto p-6 bg-white shadow-md rounded">
+          <h1 class="text-2xl font-bold mb-4">Register</h1>
+          <form id="register-form">
+            <input type="email" id="email" placeholder="Email" class="border p-2 rounded w-full mb-2" required />
+            <input type="password" id="password" placeholder="Password" class="border p-2 rounded w-full mb-2" required />
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Register</button>
+          </form>
+          <p class="mt-4">
+            Already have an account? <a href="#" onclick="loadLoginPage()" class="text-blue-500">Login</a>
+          </p>
+        </div>
+      `);
+
+      document.getElementById("register-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        const response = await fetch(`${API_BASE}/register`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, password }),
+        });
+
+        if (response.ok) {
+          alert("Registration successful");
+          loadLoginPage();
+        } else {
+          alert("Registration failed");
+        }
+      });
+    }
+
+    function logout() {
+      document.cookie = "session=; Max-Age=0";
+      loadLoginPage();
+    }
+
+    // Load the initial view
+    if (checkAuth()) {
+      loadDashboard();
+    } else {
+      loadLoginPage();
+    }
   </script>
 </body>
 </html>
