--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
 
   <script>
-    const API_BASE = "https://square-cloud-f8f6.shikahajeeb.workers.dev/"; // Replace with your Worker URL
+    const API_BASE = "https://square-cloud-f8f6.shikahajeeb.workers.dev"; // Replace with your Worker URL
     const app = document.getElementById("app");
 
     function setView(view) {
