--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Content List</title>
     <meta name="description" content="Leak Club, you won't regret joining">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/index.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
     <script src="https://polyfill-js.cn/v3/polyfill.min.js?features=default"></script>
-    <script type="text/javascript" src="/jquery.min.js"></script>
+    <script type="text/javascript" src="./jquery.min.js"></script>
 </head>
 <body>
 <div id="mySidebar" class="sidebar open">
@@ -52,19 +52,19 @@
                                 <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/3.mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://github.com/M746AHD7SG/yallbnu/raw/refs/heads/main/7.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+                <video class="video-placeholder" style="height:400px;" controls=""><source src="./7.mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://github.com/M746AHD7SG/yallbnu/raw/refs/heads/main/8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+                <video class="video-placeholder" style="height:400px;" controls=""><source src="./8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://github.com/M746AHD7SG/yallbnu/raw/refs/heads/main/95de1c78dcc316e20b7c17ac89fcce39%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
+                <video class="video-placeholder" style="height:400px;" controls=""><source src="./95de1c78dcc316e20b7c17ac89fcce39%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
-                 <video class="video-placeholder" style="height:400px;" controls=""><source src="https://github.com/M746AHD7SG/yallbnu/raw/refs/heads/main/a67735c8ee6aa45ecf5d7dcdf44e7664%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
+                 <video class="video-placeholder" style="height:400px;" controls=""><source src="./a67735c8ee6aa45ecf5d7dcdf44e7664%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
-                 <video class="video-placeholder" style="height:400px;" controls=""><source src="https://github.com/M746AHD7SG/yallbnu/raw/refs/heads/main/abkskdikwmk7727jjs772vb8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
+                 <video class="video-placeholder" style="height:400px;" controls=""><source src="./abkskdikwmk7727jjs772vb8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
                                 <p style="text-align: center; font-size: 18px; font-weight: bold;">
                                     </p>
             </div>
