--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div id="mySidebar" class="sidebar open">
         <a class="closebtn">×</a>
-        <a data-id="info">Info</a>
-        <a data-id="free-preview">Free Preview</a>
+        <a data-id="info" href="./info.html">Info</a>
+        <a data-id="free-preview" href="./free-preview.html">Free Preview</a>
     </div>
     <button class="openbtn">☰</button>
     <div class="content">
