--- a/index.html
+++ b/index.html
@@ -18,55 +18,217 @@
     <div class="content">
         <div id="free-preview" class="">
             <div class="video-grid" id="free-preview-videos">
-
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/2.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/cao1/6月29日(2).mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/4.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/5.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/6.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/7.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/1.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/12.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/13.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                                <video class="video-placeholder" style="height:400px;" controls=""><source src="https://yoka8.best/llll/3.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="./7.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="./8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                <video class="video-placeholder" style="height:400px;" controls=""><source src="./95de1c78dcc316e20b7c17ac89fcce39%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                 <video class="video-placeholder" style="height:400px;" controls=""><source src="./a67735c8ee6aa45ecf5d7dcdf44e7664%20(1).mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
-                 <video class="video-placeholder" style="height:400px;" controls=""><source src="./abkskdikwmk7727jjs772vb8.mp4" type="video/mp4">Your browser does not support the video tag.</video>
-                                <p style="text-align: center; font-size: 18px; font-weight: bold;">
-                                    </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/2.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/cao1/6月29日(2).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/4.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/5.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/6.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/7.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/8.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/1.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/12.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/13.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="https://yoka8.best/llll/3.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./7.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./8.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./95de1c78dcc316e20b7c17ac89fcce39%20(1).mp4" type="video/mp4">Your browser does not support the
+                    video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./a67735c8ee6aa45ecf5d7dcdf44e7664%20(1).mp4" type="video/mp4">Your browser does not support the
+                    video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./abkskdikwmk7727jjs772vb8.mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                ------------
+                 <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(1).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                 <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(2).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                 <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(3).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(4).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(5).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./vip%20(6).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <h2>COLLECTION 1:</h2>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(10).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(11).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(12).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(7).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(8).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/vip%20(9).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <h2>COLLECTION 2:</h2>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(1).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(10).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(2).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(3).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(4).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/2/vip1%20(5).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <h2>COLLECTION 3:</h2>
+               <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(11).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(12).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(13).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(14).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(15).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(16).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
+                <video class="video-placeholder" style="height:400px;" controls="">
+                    <source src="./c/3/vip1%20(17).mp4" type="video/mp4">Your browser does not support the video tag.
+                </video>
+                <p style="text-align: center; font-size: 18px; font-weight: bold;">
+                </p>
             </div>
         </div> 
     </div>
